# auto-writ

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md  pyproject.toml  tox.ini
config/: commands.yaml  settings.yaml
src/writ/: __init__.py  __main__.py  app.py  cli.py  commands.py  config.py  exceptions.py  executor.py  output.py  pipeline.py  variables.py
tests/: conftest.py  test_app.py  test_cli.py  test_commands.py  test_config.py  test_exceptions.py  test_executor.py  test_integration.py  test_main.py  test_output.py  test_pipeline.py  test_variables.py
tests/fixtures/: conditional_pipeline.yaml  sample_workflow.py  sample_workflow.sh  simple_pipeline.yaml  valid_commands.yaml  valid_settings.yaml
